force-app/main/default/objects/ROI_Master__c/fields/Is_Staff_Loan__c.field-meta.xml
<CustomField>
    <fullName>Is_Staff_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Staff Loan</label>
    <type>Checkbox</type>
</CustomField>