force-app/main/default/objects/ROI_Master__c/fields/Risk_Document__c.field-meta.xml
<CustomField>
    <fullName>Risk_Document__c</fullName>
    <label>Risk Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>